--- a/pages/trabajaconnosotros.html
+++ b/pages/trabajaconnosotros.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <title>Trabaja con Nosotros</title>
 </head>
@@ -10,24 +13,57 @@
     <header>
         <img src="../img/banner.jpeg" alt="logo huellitas">
         <h1>Trabaja con Nosotros</h1>
-        <nav class="navbar navbar-expand-lg menu-color">
-            <div class="container-fluid">
-                <a class="navbar-brand menu-color" href="../index.html">Inicio</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-link menu-color" aria-current="page" href="./nosotros.html">Nosotros</a>
-                        <a class="nav-link menu-color" href="./nuestrosclientes.html">Nuestros Clientes</a>
-                        <a class="nav-link menu-color" href="./trabajaconnosotros.html">Trabaja con Nosotros</a>
-                        <a class="nav-link menu-color" href="./dejanostucontacto.html">Dejanos tu Contacto</a>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+            crossorigin="anonymous"></script>
+
+            <nav class="navbar navbar-expand-lg menu-color">
+                <div class="container-fluid">
+                    <a class="navbar-brand menu-color" href="../index.html">Inicio</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                            <a class="nav-link menu-color" aria-current="page" href="./nosotros.html">Nosotros</a>
+                            <a class="nav-link menu-color" href="./nuestrosclientes.html">Nuestros Clientes</a>
+                            <a class="nav-link menu-color" href="./trabajaconnosotros.html">Trabaja con Nosotros</a>
+                            <a class="nav-link menu-color" href="./dejanostucontacto.html">Dejanos tu Contacto</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </nav>
+            </nav>
     </header>
+
+<main>
+    <section class="trabajar_nos">
+        <h2>Podes trabajar con nosotros, contanos tu experiencia y de donde sos para hacer el mach!</h2>
+        <img src="../img/trabajaconnosotros.jpeg" alt="trabaja con nocosotros">
+    </section>
+   
+    <div class="mb-3 trabajarconnos">
+        <label for="exampleFormControlInput1" class="form-label">Dejanos tu mail</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
+      </div>
+      <div class="mb-3 experiencia">
+        <label for="exampleFormControlTextarea1" class="form-label">Contanos tu experiencia</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      </div>
+</main>
 </body>
+
+    <footer id="redes">
+        <a href="../index.html">
+            <h2>Dejando Huellitas</h2>
+        </a>
+        
+        <i class="bi bi-instagram"></i>
+        <i class="bi bi-whatsapp"></i>
+        <i class="bi bi-facebook"></i>
+
+    </footer>
+
+
 </html>
