--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    <meta name="description" content="Cuidamos la salud de tu mascosta y por esa razon tenemos paseadores en todas las zonas para que te puedas comunicar con ellos y empezar a dejar huellitas, vos elegis el horario y el dia y contas con gps para mas seguridad">
+    <meta name="keywords" content="perro, perros,pasear,paseadores,mascotas,adiestramiento,adiestrar,veterinarias,paseador,">
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-        <link rel="stylesheet" href="./css/style.css">
-    <title>Dejando huellitas</title>
+      <!--<link rel="stylesheet" href="./css/style.css">-->   
+      <link rel="stylesheet" href="./css/estilos.css">
+      <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <title>Dejando huellitas Paseadores de perros </title>
 </head>
 
 <body>
@@ -104,18 +108,7 @@
         <a href="./index.html">
             <h2>Dejando Huellitas</h2>
         </a>
-        <nav>
-            <ul>
-                <li><a href="./index.html">Inicio</a></li>
-                <li><a href="./pages/nosotros.html">Nosotros</a>
-                <li><a href="./pages/nuestrosclientes.html">Nuestros clientes</a></li>
-                <li><a href="./pages/trabajaconnosotros.html">Trabaja con Nosotros</a></li>
-                <li><a href="./pages/dejanostucontacto.html">Dejanos tu contacto</a></li>
-
-            </ul>
-
-        </nav>
-        
+      
             <i class="bi bi-instagram"></i>
             <i class="bi bi-whatsapp"></i>
             <i class="bi bi-facebook"></i>
