--- a/pages/dejanostucontacto.html
+++ b/pages/dejanostucontacto.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width, initial-scale=1.0">
+    <meta name="description" content="Dejanos tu conatcto por cualquier duda o consulta en cuando al servicio o bien si queres saber que paseadores tenemos en tu zona">
+    <meta name="keywords" content="perro, perros,pasear,paseadores,mascotas,adiestramiento,adiestrar,veterinarias,paseador,">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+     <!--<link rel="stylesheet" href="../css/style.css">-->
+    <link rel="stylesheet" href="../css/estilos.css"> 
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <title>Dejanos tu contacto</title>
 </head>
 <body>
