--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Te invitamos a que nos conozcas y sepas como trabajamos te bridanmos disponibilida en todas las zonas con personas que aman a los animales igual que vos ">
+    <meta name="keywords" content="perro, perros,pasear,paseadores,mascotas,adiestramiento,adiestrar,veterinarias,paseador,">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Nosotros</title>
+   <!--<link rel="stylesheet" href="../css/style.css">-->
+   <link rel="stylesheet" href="../css/estilos.css"> 
+   <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+      <title>Nosotros</title>
 </head>
 <body>
     <header>
