--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -15,14 +15,15 @@
 </head>
 <body>
     <header>
-        <img src="../img/banner.jpeg" alt="logo huellitas">
+        <a href="../index.html"><img src="../img/huellitas.png" alt="logo huellitas"></a>
+        <a href="../index.html">
         <h1>Nosotros</h1>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
             crossorigin="anonymous"></script>
         <nav class="navbar navbar-expand-lg menu-color">
             <div class="container-fluid">
-                <a class="navbar-brand menu-color" href="../index.html">Inicio</a>
+                <a class="navbar-brand menu-color" href="../index.html"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -30,6 +31,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
+                        <a class="nav-link menu-color" href="../index.html">Inicio</a>
                         <a class="nav-link menu-color" aria-current="page" href="./nosotros.html">Nosotros</a>
                         <a class="nav-link menu-color" href="./nuestrosclientes.html">Nuestros Clientes</a>
                         <a class="nav-link menu-color" href="./trabajaconnosotros.html">Trabaja con Nosotros</a>
@@ -43,36 +45,33 @@
     <main>
         <section class="comotrabajamos_nos">
             <h2>Como trabajamos</h2>
-            <p>Como sabemos el paseo diario en las mascotas ayuda a reducir el estres como tambien ayuda a comunicarse como seres de su misma especie a traves del juego. "Dejando Huellitas" cuenta con mas de 200 paseadores que se van a ocupar de esa tarea</p>
+            <p>Como sabemos el paseo diario en las mascotas ayuda a reducir el estres como tambien ayuda a comunicarse como seres de su misma especie a traves del juego ya que ejercitan su mente y su cuerpo mediante diferentes estimulos. Quemar su energía durante el día también tendrá el efecto añadido de ayudarles a descansar mejor por la noche, con la esperanza de que eso haga lo mismo por vos. Mejora su alimentacion como su digestion, tambien su comportamiento y salud mental a traves de la creacion de rutinas. Para eso contamos con mas de 200 paseadores para crear estos factores. Estas preparado para que tu mascota empiece a "DEJAR HUELLITAS"  </p>
             
         </section>
-        <section class="carrusel">
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-                <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                </div>
+        <section>
+           <div class="carruseldos">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="../img/perroadiestrado.jpeg" class="d-block w-100" alt="...">
+                    <img src="../img/perroadiestrado.jpeg" class="d-block w-100" alt="perro con correa">
                   </div>
                   <div class="carousel-item">
-                    <img src="../img/perrojuego.jpeg" class="d-block w-100" alt="...">
+                    <img src="../img/perrojuego.jpeg" class="d-block w-100" alt="perro jugando">
                   </div>
                   <div class="carousel-item">
-                    <img src="../img/perrolengua.jpeg" class="d-block w-100" alt="...">
+                    <img src="../img/perrolengua.jpeg" class="d-block w-100" alt="perro paseando">
                   </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Next</span>
                 </button>
               </div>
+           </div>
         </section>
         <section class="comotrabajamos_nos">
             <h2>Como lo Hacemos</h2>
