--- a/pages/nuestrosclientes.html
+++ b/pages/nuestrosclientes.html
@@ -15,14 +15,15 @@
 </head>
 <body>
     <header>
-        <img src="../img/banner.jpeg" alt="logo huellitas">
+        <a href="../index.html"><img src="../img/huellitas.png" alt="logo huellitas"></a>
+        <a href="../index.html">
         <h1>Nuestros Clientes</h1>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
             crossorigin="anonymous"></script>
         <nav class="navbar navbar-expand-lg menu-color">
             <div class="container-fluid">
-                <a class="navbar-brand menu-color" href="../index.html">Inicio</a>
+                <a class="navbar-brand menu-color" href="../index.html"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -30,6 +31,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
+                        <a class="nav-link menu-color" href="../index.html">Inicio</a>
                         <a class="nav-link menu-color" aria-current="page" href="./nosotros.html">Nosotros</a>
                         <a class="nav-link menu-color" href="./nuestrosclientes.html">Nuestros Clientes</a>
                         <a class="nav-link menu-color" href="./trabajaconnosotros.html">Trabaja con Nosotros</a>
@@ -50,27 +52,27 @@
     <main>
         <section class="grid-galeria">
             <div class="grid-item img-1">
-                <img src="../img/cliente.jpeg" alt="">
+                <img src="../img/cliente.jpeg" alt="perro paseando">
                 <h3>Bruno con su manada</h3>
             </div>
             <div class="grid-item">
-                <img src="../img/clientes.jpeg" alt="">
+                <img src="../img/clientes.jpeg" alt="perro jugando">
                 <h3>Laura con su manada</h3>
             </div>
             <div class="grid-item img-3">
-                <img src="../img/perrocliente.jpeg" alt="">
+                <img src="../img/perrocliente.jpeg" alt="perro listo para pasear">
                 <h3>Pedro jugando con loki</h3>
             </div>
             <div class="grid-item img-4">
-                <img src="../img/perrosclientes.jpeg" alt="">
+                <img src="../img/perrosclientes.jpeg" alt="perros manada">
                 <h3>¿Jugamos?</h3>
             </div>
             <div class="grid-item">
-                <img src="../img/perrosexpe.jpeg" alt="">
+                <img src="../img/perrosexpe.jpeg" alt="perros para jugar">
                 <h3>Esperando la salida para jugar</h3>
             </div>
             <div class="grid-item">
-                <img src="../img/perrosexperien.jpeg" alt="">
+                <img src="../img/perrosexperien.jpeg" alt="perro con correa">
                 <h3>Lujan con su manada</h3>
             </div>
 
