--- a/pages/trabajaconnosotros.html
+++ b/pages/trabajaconnosotros.html
@@ -15,7 +15,8 @@
 </head>
 <body>
     <header>
-        <img src="../img/banner.jpeg" alt="logo huellitas">
+        <a href="../index.html"><img src="../img/huellitas.png" alt="logo huellitas"></a>
+        <a href="../index.html">
         <h1>Trabaja con Nosotros</h1>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
@@ -23,7 +24,7 @@
 
             <nav class="navbar navbar-expand-lg menu-color">
                 <div class="container-fluid">
-                    <a class="navbar-brand menu-color" href="../index.html">Inicio</a>
+                    <a class="navbar-brand menu-color" href="../index.html"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -31,6 +32,7 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
+                          <a class="nav-link menu-color" href="../index.html">Inicio</a>
                             <a class="nav-link menu-color" aria-current="page" href="./nosotros.html">Nosotros</a>
                             <a class="nav-link menu-color" href="./nuestrosclientes.html">Nuestros Clientes</a>
                             <a class="nav-link menu-color" href="./trabajaconnosotros.html">Trabaja con Nosotros</a>
@@ -44,17 +46,60 @@
 <main>
     <section class="trabajar_nos">
         <h2>Podes trabajar con nosotros, contanos tu experiencia y de donde sos para hacer el mach!</h2>
-        <img src="../img/trabajaconnosotros.jpeg" alt="trabaja con nocosotros">
+        <p>Dejanos tus datos y nos estaremos comunicando con vos, si tenes experiencia mucho mejor pero si no la tenes y sos amante de los animales tenemos un equipo para capacitarte. Estas preparado para empezar a "Dejar Huellitas"</p>
+        <div class="trabajaconnosimg">
+            <img src="../img/trabajaconnosotros.jpeg" alt="trabaja con nocosotros">
+        </div>
+        
     </section>
    
-    <div class="mb-3 trabajarconnos">
-        <label for="exampleFormControlInput1" class="form-label">Dejanos tu mail</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
-      </div>
-      <div class="mb-3 experiencia">
-        <label for="exampleFormControlTextarea1" class="form-label">Contanos tu experiencia</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-      </div>
+    <form class="row g-3 needs-validation" novalidate>
+        <div class="col-md-4">
+          <label for="validationCustom01" class="form-label">Nombre</label>
+          <input type="text" class="form-control" id="validationCustom01" value="" required>
+          <div class="valid-feedback">
+            Looks good!
+          </div>
+        </div>
+        <div class="col-md-4">
+          <label for="validationCustom02" class="form-label">Apellido</label>
+          <input type="text" class="form-control" id="validationCustom02" value="" required>
+          <div class="valid-feedback">
+            Looks good!
+          </div>
+        </div>
+        <div class="col-md-4">
+          <label for="validationCustomUsername" class="form-label">Mail</label>
+          <div class="input-group has-validation">
+            <span class="input-group-text" id="inputGroupPrepend">@</span>
+            <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
+            <div class="invalid-feedback">
+              Please choose a username.
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <label for="validationCustom03" class="form-label">Donde Vivis</label>
+          <input type="text" class="form-control" id="validationCustom03" required>
+          <div class="invalid-feedback">
+            Please provide a valid city.
+          </div>
+        </div>
+        <div class="col-md-3">
+          <label for="validationCustom05" class="form-label">Experiencia</label>
+          <input type="text" class="form-control" id="validationCustom05" required>
+          <div class="invalid-feedback">
+            Please provide a valid zip.
+          </div>
+        </div>
+        <div class="col-12">
+         
+        <div class="col-12">
+          <button class="botonenviar" type="submit">Enviar</button>
+        </div>
+      </form>
+   
+   
 </main>
 </body>
 
